# Only4BMS

./: .gitignore  MULTIPLAYER_API.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_macos.yml  build_release.yml  build_windows.yml  deploy_itchio.yml
docs/: README.de.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.th.md  README.zh.md
example_server/: app.py  requirements.txt
mods/: MOD_GUIDE.md
mods/ai_multi/: __init__.py  env.py  extension.py  i18n.py  inference.py  train.py
mods/course_mode/: course_generator.py  course_menu.py  course_session.py  extension.py  i18n.py
mods/online_multiplay/: __init__.py  extension.py  i18n.py  multiplayer_menu.py
mods/two_key/: __init__.py  extension.py  i18n.py  session.py
src/only4bms/: i18n.py  main.py  paths.py  rhythm_game.py
src/only4bms/ai/: env.py  inference.py  train.py
src/only4bms/core/: bms_parser.py  network_manager.py
src/only4bms/game/: ai_multi_extension.py  assets.py  challenge.py  constants.py  course_session.py  engine.py  game_extension.py  note_mods.py  renderer.py  rhythm_game.py
src/only4bms/game/skins/: __init__.py  blue.py  gold.py
src/only4bms/ui/: calibration_menu.py  challenge_menu.py  components.py  key_config_menu.py  main_menu.py  settings_menu.py  song_select_menu.py
